--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -26,39 +26,57 @@
   <li><a href="/fall2019-m01/individual-project.html">Individual Project</a></li>
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
-</div>
+</div
 <div role="main" id="page-body">
-        <main class="col-3">
-            <h1>Week 09.01</h1>
-            <nav>
-                <ul>
-                    <li><a href="../../index.html">Home</a></li>
-                    <li>Week 09.01</li>
-                </ul>
-            </nav>
-            <section>
-                <h2>Web Accessibility</h2>
-                <p>Do the pre-class reading and write a short summary in this week's pre-class/summary.txt</p>
-            </section>
-        </main>
-        
-    </div>
-    <main>
-        <h1>Week 09.02</h1>
-        <nav>
-            <ul>
-                <li><a href="../../index.html">Home</a></li>
-                <li>Week 09.02</li>
-            </ul>
-        </nav>
-        <section>
-            <h2>HTML Forms</h2>
-            <ul>
-                <li><a href="./form-elements.html">Form Elements</a></li>
-            </ul>
-        </section>
-        
-    </main>
+<section id="header-panel">
+<h1 id="week-10-web-accessibility-html-forms">Week 10, Web Accessibility &amp; HTML Forms</h1>
+</section>
+<section id="page-content">
+<h2 id="learning-outcomes">Learning Outcomes</h2>
+<p>After this week you should be able to </p>
+<ul>
+<li>Describe the importance of web accessibility</li>
+<li>Test page for WCAG2.0 compliancy</li>
+<li>Describe ARIA</li>
+</ul>
+<h2 id="1001">10.01</h2>
+<h3 id="pre-class-reading">Pre-class Reading</h3>
+<p><a href="https://www.dreamhost.com/blog/make-your-website-accessible/">Making website accessible</a></p>
+<h4 id="class-slides">Class Slides</h4>
+<p>Guest Lecture by Pam Thomas</p>
+<h3 id="group-activity-lab">Group Activity / Lab</h3>
+<ul>
+<li>Install WAVE Plugin <a href="https://wave.webaim.org/extension/">https://wave.webaim.org/extension/</a></li>
+</ul>
+<h3 id="post-class-reading">Post-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA">ARIA</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Forms">WCAG2.0</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Forms">Section 508</a></li>
+<li><a href="https://webaim.org/standards/wcag/checklist">WebAIM Checklist</a></li>
+</ul>
+<hr />
+<h2 id="1002">10.02</h2>
+<h3 id="pre-class-reading_1">Pre-class Reading</h3>
+<ul>
+<li><a href="https://www.w3schools.com/html/html_forms.asp">Getting Started with Forms</a></li>
+</ul>
+<h3 id="class-slides_1">Class Slides</h3>
+<ul>
+<li><a href="../../slides/ist263-w10-1.pdf">Week 10.1 Slides</a></li>
+</ul>
+<h3 id="post-class-reading_1">Post-Class Reading</h3>
+<ul>
+<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Forms">MDN, Forms</a></li>
+</ul>
+<h2 id="homework-due-this-week">Homework due this week</h2>
+<ol>
+<li>Work on your individual project, submit update to Blackboard</li>
+<li>Test your individual project using WAVE</li>
+<li>Complete SAGE survey (you will receive an email when the window opens)</li>
+<li>Do the pre-class reading for next class</li>
+</ol>
+</div>
 </body>
 
 </html>
