--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -76,6 +76,7 @@
 <li>Complete SAGE survey (you will receive an email when the window opens)</li>
 <li>Do the pre-class reading for next class</li>
 </ol>
+</section>
 </div>
 </body>
 
