--- a/schedule/week-10/index.html
+++ b/schedule/week-10/index.html
@@ -28,24 +28,26 @@
 </ul>
 </div>
 <div role="main" id="page-body">
-        <main class="col-3">
-            <h1 id="week-10-intro-to-bootstrap-4">Week 10, Intro. to Bootstrap 4</h1>
-            <h2 id="learning-outcomes"><i class="fa fa-star"></i>&nbsp;Learning Outcomes</h2>
+<section id="header-panel">
+<h1 id="week-10-intro-to-bootstrap-4">Week 10, Intro. to Bootstrap 4</h1>
+</section>
+<section id="page-content">
+            <h2 id="learning-outcomes">Learning Outcomes</h2>
             <p>After this week you should be able to </p>
             <ul>
             <li>Describe benefits of using Web Frameworks</li>
             <li>Incorporate Bootstrap in your web pages</li>
             </ul>
             <h2 id="1001">10.01</h2>
-            <h4 id="pre-class-reading">Pre-class Reading</h4>
+            <h3 id="pre-class-reading">Pre-class Reading</h3>
             <p><a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Getting Started</a></p>
-            <h4 id="class-slides">Class Slides</h4>
+            <h3 id="class-slides">Class Slides</h3>
             <ul>
             <li><a href="../../slides/ist263-w9-1.pdf">Slides</a></li>
             </ul>
             <h4 id="group-activity-lab">Group Activity / Lab</h4>
             <p>Copy your resume HTML page from <code>week-03</code> into <code>week-11/01/labs</code> folder. Use Bootstrap 4 to format your resume. </p>
-            <h4 id="post-class-reading">Post-Class Reading</h4>
+            <h3 id="post-class-reading">Post-Class Reading</h3>
             <ul>
             <li><a href="https://getbootstrap.com/docs/4.3/content/typography/">Typography</a></li>
             </ul>
@@ -55,7 +57,7 @@
             <ul>
             <li><a href="https://getbootstrap.com/docs/4.3/components/jumbotron/">Jumbotron</a></li>
             </ul>
-            <h4 id="post-class-reading_1">Post-Class Reading</h4>
+            <h3 id="post-class-reading_1">Post-Class Reading</h3>
             <ul>
             <li><a href="https://www.w3schools.com/bootstrap4/">W3Schools - BS Getting Started</a></li>
             <li><a href="https://getbootstrap.com/docs/4.3/components/list-group/">List Groups</a></li>
@@ -66,7 +68,8 @@
             <li>Complete SAGE survey (you will receive an email when the window opens)</li>
             <li>Do the pre-class reading for next class</li>
             </ol>
-        </div>
+    </section>    
+    </div>
         <footer class="col-md-12 text-center">
             
             <hr>
