--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -26,7 +26,7 @@
   <li><a href="/fall2019-m01/individual-project.html">Individual Project</a></li>
   <li><a href="/fall2019-m01/question-bank.html">Question Bank</a></li>
 </ul>
-</div
+</div>
 <div role="main" id="page-body">
 <section id="header-panel">
 <h1 id="week-10-web-accessibility-html-forms">Week 10, Web Accessibility &amp; HTML Forms</h1>
@@ -77,6 +77,7 @@
 <li>Do the pre-class reading for next class</li>
 </ol>
 </section>
+</div>
 </div>
 </body>
 
