--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -29,7 +29,7 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1 id="week-10-web-accessibility-html-forms">Week 10, Web Accessibility &amp; HTML Forms</h1>
+<h1 id="week-09-web-accessibility-html-forms">Week 09, Web Accessibility &amp; HTML Forms</h1>
 </section>
 <section id="page-content">
 <h2 id="learning-outcomes">Learning Outcomes</h2>
@@ -39,7 +39,7 @@
 <li>Test page for WCAG2.0 compliancy</li>
 <li>Describe ARIA</li>
 </ul>
-<h2 id="1001">10.01</h2>
+<h2 id="0901">09.01</h2>
 <h3 id="pre-class-reading">Pre-class Reading</h3>
 <p><a href="https://www.dreamhost.com/blog/make-your-website-accessible/">Making website accessible</a></p>
 <h4 id="class-slides">Class Slides</h4>
@@ -56,14 +56,14 @@
 <li><a href="https://webaim.org/standards/wcag/checklist">WebAIM Checklist</a></li>
 </ul>
 <hr />
-<h2 id="1002">10.02</h2>
+<h2 id="0902">09.02</h2>
 <h3 id="pre-class-reading_1">Pre-class Reading</h3>
 <ul>
 <li><a href="https://www.w3schools.com/html/html_forms.asp">Getting Started with Forms</a></li>
 </ul>
 <h3 id="class-slides_1">Class Slides</h3>
 <ul>
-<li><a href="../../slides/ist263-w10-1.pdf">Week 10.1 Slides</a></li>
+<li>To Come<!--a href="../../slides/ist263-w10-1.pdf">Week 10.1 Slides</a--></li>
 </ul>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
