--- a/schedule/week-10/index.html
+++ b/schedule/week-10/index.html
@@ -43,7 +43,7 @@
             <p><a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Getting Started</a></p>
             <h3 id="class-slides">Class Slides</h3>
             <ul>
-            <li><a href="../../slides/ist263-w9-1.pdf">Slides</a></li>
+            <li>To Come<!--a href="../../slides/ist263-w9-1.pdf">Slides</a--></li>
             </ul>
             <h4 id="group-activity-lab">Group Activity / Lab</h4>
             <p>Copy your resume HTML page from <code>week-03</code> into <code>week-11/01/labs</code> folder. Use Bootstrap 4 to format your resume. </p>
@@ -64,7 +64,7 @@
             </ul>
             <h2 id="homework-due-this-week">Homework due this week</h2>
             <ol>
-            <li>Work on your individual project, commit update to GitHub</li>
+            <li>Work on your individual project, submit update to Blackboard</li>
             <li>Complete SAGE survey (you will receive an email when the window opens)</li>
             <li>Do the pre-class reading for next class</li>
             </ol>
