--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -42,8 +42,10 @@
 <h2 id="0901">09.01</h2>
 <h3 id="pre-class-reading">Pre-class Reading</h3>
 <p><a href="https://www.dreamhost.com/blog/make-your-website-accessible/">Making website accessible</a></p>
-<h4 id="class-slides">Class Slides</h4>
-<p>Guest Lecture by Pam Thomas</p>
+<h3 id="class-slides">Class Slides</h>
+<ul>
+<li>To Come<!--a href="../../slides/ist263-w10-1.pdf">Week 09.01 Slides</a--></li>
+</ul>
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
 <li>Install WAVE Plugin <a href="https://wave.webaim.org/extension/">https://wave.webaim.org/extension/</a></li>
@@ -63,7 +65,7 @@
 </ul>
 <h3 id="class-slides_1">Class Slides</h3>
 <ul>
-<li>To Come<!--a href="../../slides/ist263-w10-1.pdf">Week 10.1 Slides</a--></li>
+<li>To Come<!--a href="../../slides/ist263-w09-2.pdf">Week 10.1 Slides</a--></li>
 </ul>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
