--- a/schedule/week-11/index.html
+++ b/schedule/week-11/index.html
@@ -28,23 +28,26 @@
 </ul>
 </div>
 <div role="main" id="page-body">
-<h1 id="week-12-bs4-components">Week 12, BS4 Components</h1>
-<h2 id="learning-outcomes"><i class="fa fa-star"></i>&nbsp;Learning Outcomes</h2>
+<section id="header-panel">
+<h1 id="week-12-bs4-components">Week 11 &ndash; Bootstrap 4 Components</h1>
+</section>
+<section id="page-content">
+<h2 id="learning-outcomes">Learning Outcomes</h2>
 <p>After this week you should be able to </p>
 <ul>
 <li>Describe benefits of using Web Frameworks</li>
 <li>Incorporate Bootstrap in your web pages</li>
 </ul>
-<h2 id="1201">12.01</h2>
-<h4 id="pre-class-reading">Pre-class Reading</h4>
+<h2 id="1101">11.01</h2>
+<h3 id="pre-class-reading">Pre-class Reading</h3>
 <p><a href="https://getbootstrap.com/docs/4.3/components/alerts/">BS Alerts</a></p>
-<h4 id="class-pages">Class Pages</h4>
+<h3 id="class-pages">Class Pages</h3>
 <ul>
 <li><a href="https://getbootstrap.com/docs/4.3/utilities/colors/">Colors</a></li>
 <li><a href="https://getbootstrap.com/docs/4.3/components/jumbotron/">Jumbotron</a></li>
 </ul>
 <hr />
-<h2 id="1202">12.02</h2>
+<h2 id="1102">11.02</h2>
 <h4 id="pre-class-reading_1">Pre-class Reading</h4>
 <p><a href="https://getbootstrap.com/docs/4.3/examples/jumbotron/">Jumbotron</a></p>
 <h4 id="post-class-reading">Post-class Reading</h4>
@@ -53,10 +56,11 @@
 </ul>
 <h2 id="homework-due-this-week">Homework due this week</h2>
 <ol>
-<li>Work on your individual project, commit update to GitHub</li>
+<li>Work on your individual project, submit update to Blackboard</li>
 <li>Complete SAGE survey (you will receive an email when the window opens)</li>
 <li>Do the pre-class reading for next class</li>
 </ol>
+</section>
 </div>
 <footer class="col-md-12 text-center">
     
