--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -42,7 +42,7 @@
 <h2 id="0901">09.01</h2>
 <h3 id="pre-class-reading">Pre-class Reading</h3>
 <p><a href="https://www.dreamhost.com/blog/make-your-website-accessible/">Making website accessible</a></p>
-<h3 id="class-slides">Class Slides</h>
+<h3 id="class-slides">Class Slides</h3>
 <ul>
 <li>To Come<!--a href="../../slides/ist263-w10-1.pdf">Week 09.01 Slides</a--></li>
 </ul>
