--- a/schedule/week-12/index.html
+++ b/schedule/week-12/index.html
@@ -28,23 +28,26 @@
 </ul>
 </div>
 <div role="main" id="page-body">
-<h1 id="week-12-bs4-layouts-grids">Week 12, BS4 Layouts / Grids</h1>
+<section id="header-panel">
+<h1 id="week-12-bs4-layouts-grids">Week 12, Bootstrap 4 Layouts / Grids</h1>
+</section>
+<section id="page-content">
 <h2 id="learning-outcomes">Learning Outcomes</h2>
 <p>After this week you should be able to </p>
 <ul>
 <li>Incorporate Bootstrap grids in your web pages</li>
 </ul>
 <h2 id="1201">12.01</h2>
-<h4 id="pre-class-reading">Pre-class Reading</h4>
+<h3 id="pre-class-reading">Pre-class Reading</h3>
 <p><a href="https://www.w3schools.com/bootstrap4/bootstrap_grid_system.asp">Grids</a></p>
-<h4 id="class-pages">Class Pages</h4>
+<h3 id="class-pages">Class Pages</h3>
 <ul>
 <li><a href="https://www.w3schools.com/bootstrap4/bootstrap_grid_xsmall.asp">XS</a></li>
 <li><a href="https://www.w3schools.com/bootstrap4/bootstrap_grid_small.asp">Sm</a></li>
 </ul>
 <hr />
 <h2 id="1202">12.02</h2>
-<h4 id="pre-class-reading_1">Pre-class Reading</h4>
+<h3 id="pre-class-reading_1">Pre-class Reading</h3>
 <p><a href="https://getbootstrap.com/docs/4.3/examples/album/">Albums</a></p>
 <h2 id="homework-due-this-week">Homework due this week</h2>
 <ol>
@@ -52,6 +55,7 @@
 <li>Complete SAGE survey (you will receive an email when the window opens)</li>
 <li>Do the pre-class reading for next class</li>
 </ol>
+</section>
 </div>
 <footer class="col-md-12 text-center">
     
