--- a/schedule/week-12/index.html
+++ b/schedule/week-12/index.html
@@ -51,7 +51,7 @@
 <p><a href="https://getbootstrap.com/docs/4.3/examples/album/">Albums</a></p>
 <h2 id="homework-due-this-week">Homework due this week</h2>
 <ol>
-<li>Work on your individual project, commit update to GitHub</li>
+<li>Work on your individual project,submit update to Blackboard</li>
 <li>Complete SAGE survey (you will receive an email when the window opens)</li>
 <li>Do the pre-class reading for next class</li>
 </ol>
