--- a/schedule/week-01/index.html
+++ b/schedule/week-01/index.html
@@ -46,11 +46,11 @@
 <hr />
 <h2 id="0101-course-overview">01.01 - Course Overview</h2>
 <p>We will go over the course syllabus. We will spend some time discussing strategies to succeed in this class. Finally, if you haven't setup your computer we will do that. </p>
-<h4 id="slides">Slides</h4>
+<h3 id="slides">Slides</h3>
 <ul>
-<li><a href="../slides/IST263-talley-W01.1.pdf">Week 01.01 Slides</a></li>
+<li><a href="../../slides/IST263-talley-W01.1.pdf">Week 01.01 Slides</a></li>
 </ul>
-<h4 id="group-activity-lab">Group Activity / Lab</h4>
+<h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
 <li>None</li>
 </ul>
@@ -62,9 +62,9 @@
 </ul>
 <h3 id="slides_1">Slides</h3>
 <ul>
-<li><a href="../slides/IST263-talley-W01.2.pdf">Week 01.02 Slides</a></li>
+<li><a href="../../slides/IST263-talley-W01.2.pdf">Week 01.02 Slides</a></li>
 </ul>
-<h4 id="post-class-readings">Post Class Readings</h4>
+<h3 id="post-class-readings">Post Class Readings</h3>
     <p><strong>Note:</strong> Content is divided to multiple pages. Click through using the "Next Page >" button at lower right.</p>
 <ul>
 <li><a href="https://www.tutorialspoint.com/web_developers_guide/web_basic_concepts.htm" target="_blank">Web - Basic Concepts</a></li>
@@ -72,9 +72,8 @@
 </li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=scWj1BMRHUA">Video - The Web is not the Net</a></li>
 </ul>
-<h3 id="homework-due-this-week">Homework due this week</h3>
+<h2 id="homework-due-this-week">Homework due this week</h2>
 <p>Look in the class folder under <code>Week01/02/after-class/index.html</code></p></div>
-
 </section>
 </div>
     <footer class="col-md-12 text-center">
