--- a/schedule/week-02/index.html
+++ b/schedule/week-02/index.html
@@ -31,7 +31,7 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Week 02, HTML</h1>
+<h1>Week 02 &ndash; HTML</h1>
 </section>
 <section id="page-content">
 <h2 id="learning-outcomes">Learning Outcomes</h2>
