--- a/schedule/week-01/index.html
+++ b/schedule/week-01/index.html
@@ -32,7 +32,7 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Week01 &ndash; Course Introduction &amp; How does the web work?</h1>
+<h1>Week01 &ndash; Course Intro, How does the web work?</h1>
 </section>
 <section id="page-content">
 <h2 id="learning-outcomes">Learning Outcomes</h2>
