--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -69,7 +69,7 @@
 - Review the file <code>week-04/02/index.html</code> in your course folder</p>
 <h3 id="class-slides_1">Class Slides</h3>
 <ul>
-<li><a href="../slides/ist263-w4-2.pdf">Week 4.2 Slides</a></li>
+<li>To Come<!--a href="../slides/ist263-w4-2.pdf">Week 4.2 Slides</a--></li>
 </ul>
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
