--- a/schedule/week-02/index.html
+++ b/schedule/week-02/index.html
@@ -49,7 +49,7 @@
 </ul>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li>To come<!--a href="../../slides/ist263-w2.pdf">Week 02.01 Slides</a--></li>
+<li><a href="../../slides/IST263-talley-W02.2.pdf">Week 02.01 Slides</a></li>
 </ul>
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
