--- a/schedule/week-03/index.html
+++ b/schedule/week-03/index.html
@@ -47,7 +47,7 @@
 </ul>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li>To Come<!--a href="../slides/ist263-w3-1.pdf">Week 3.1 Slides</a></li-->
+<li><a href="../../slides/IST263-talley-W03.1.pdf">Week 3.1 Slides</a></li>
 </ul>
 <hr />
 <h2 id="0302">03.02</h2>
@@ -58,7 +58,7 @@
 </ul>
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
-To Come<!--li>Our solar system. See details in your class' <code>week-03/02/labs</code> folder</li-->
+<li>Our solar system. See details in your class' <code>week-03/02/labs</code> folder</li>
 </ul>
 <h3 id="post-class-reading">Post-Class Reading</h3>
 <ul>
