--- a/schedule/week-04/02/labs/howto.html
+++ b/schedule/week-04/02/labs/howto.html
@@ -30,8 +30,7 @@
             </ul>
         </section>
         <section>
-            <h2>Submit to GitHub</h2>
-            <p>If you have the time try submitting this to GitHub. You can follow the instructions on the class website</p>
+            <h2>Submit to Blackboard</h2>
         </section>
     </main>
 </body>
