--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -46,11 +46,10 @@
 <h3 id="pre-class-reading">Pre-Class Reading</h3>
 <ul>
 <li><a href="https://www.w3schools.com/css/css_intro.asp">CSS Introduction</a></li>
-<li>Review the file <code>week-04/01/index.html</code> in your course folder</li>
 </ul>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li>To Come<!--a href="../slides/ist263-w4-1.pdf">Week 4.1 Slides</a--></li>
+<li><a href="../slides/ist263-talley-w4-1.pdf">Week 4.1 Slides</a></li>
 </ul>
 <h3 id="group-activty-lab">Group Activty / Lab</h3>
 <ul>
@@ -69,7 +68,7 @@
 - Review the file <code>week-04/02/index.html</code> in your course folder</p>
 <h3 id="class-slides_1">Class Slides</h3>
 <ul>
-<li>To Come<!--a href="../slides/ist263-w4-2.pdf">Week 4.2 Slides</a--></li>
+<li><a href="../slides/ist263-talley-w4-2.pdf">Week 4.2 Slides</a></li>
 </ul>
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
