--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -49,7 +49,7 @@
 </ul>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li><a href="../slides/ist263-talley-w04-1.pdf">Week 4.1 Slides</a></li>
+<li><a href="../../slides/ist263-talley-w04-1.pdf">Week 4.1 Slides</a></li>
 </ul>
 <h3 id="group-activty-lab">Group Activty / Lab</h3>
 <ul>
@@ -68,7 +68,7 @@
 - Review the file <code>week-04/02/index.html</code> in your course folder</p>
 <h3 id="class-slides_1">Class Slides</h3>
 <ul>
-<li><a href="../slides/ist263-talley-w04-2.pdf">Week 4.2 Slides</a></li>
+<li><a href="../../slides/ist263-talley-w04-2.pdf">Week 4.2 Slides</a></li>
 </ul>
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
