--- a/schedule/week-03/index.html
+++ b/schedule/week-03/index.html
@@ -56,6 +56,11 @@
 <li><a href="https://www.w3schools.com/html/html_quiz.asp">HTML Quiz</a>  </li>
 <li>For this class' summary tell me something that is still confusing</li>
 </ul>
+<h3 id="class-slides">Class Slides</h3>
+<ul>
+<li><a href="../../slides/IST263-talley-W03.2.pdf">Week 3.1 Slides</a></li>
+</ul>
+<hr />
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
 <li>Our solar system. See details in your class' <code>week-03/02/labs</code> folder</li>
