--- a/schedule/week-05/index.html
+++ b/schedule/week-05/index.html
@@ -47,7 +47,7 @@
 </ul>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li><a href="../../slides/ist263-w5.1.pdf">Week 5.1 Slides</a></li>
+<li><a href="../../slides/ist263-talley-w5.1.pdf">Week 5.1 Slides</a></li>
 </ul>
 <h3 id="group-activty-lab">Group Activty / Lab</h3>
 <ul>
@@ -63,7 +63,7 @@
 <h2 id="0502-css-selectors">05.02 CSS Selectors</h2>
 <h3 id="class-slides_1">Class Slides</h3>
 <ul>
-<li><a href="../../slides/ist263-w5.2.pdf">Week 5.2 Slides</a></li>
+<li><a href="../../slides/ist263-talley-w5.2.pdf">Week 5.2 Slides</a></li>
 </ul>
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
