--- a/schedule/week-06/index.html
+++ b/schedule/week-06/index.html
@@ -48,7 +48,7 @@
 - <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction">https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction</a>  </p>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li><a href="/slides/IST263-talley-W06.1.pdf">Week 6.1 Slides</a--></li>
+<li><a href="../../slides/IST263-talley-W06.1.pdf">Week 6.1 Slides</a--></li>
 </ul>
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
