--- a/computer-setup.html
+++ b/computer-setup.html
@@ -83,7 +83,7 @@ than using the typical LMS. It will seem foreign when you start but be a little 
 <p><strong> These first 5 steps will create your course folder/repo on GitHub </strong></p>
 <ol>
 <li>
-<p>Click the link <a href='https://classroom.github.com/a/ueGpuaz0' target='_blank'>https://classroom.github.com/a/ueGpuaz0</a> to get started.</p>
+<p>Click the link <a href='#' target='_blank'>updated link to come</a> to get started.</p>
 </li>
 <li>
 <p>You will be asked to signin with your GitHub username and password if you are not signed in. </p>
