Updated GitHub link
Also removed Accept Assignment instructions

--- a/computer-setup.html
+++ b/computer-setup.html
@@ -83,11 +83,12 @@ than using the typical LMS. It will seem foreign when you start but be a little 
 <p><strong> These first 5 steps will create your course folder/repo on GitHub </strong></p>
 <ol>
 <li>
-<p>Click the link <a href='#' target='_blank'>updated link to come</a> to get started.</p>
+<p>Click the link <a href='https://github.com/ist263-talley/fall2019-m01' target='_blank'>https://github.com/ist263-talley/fall2019-m01</a> to get started.</p>
 </li>
 <li>
 <p>You will be asked to signin with your GitHub username and password if you are not signed in. </p>
 </li>
+<!--
 <li>
 <p>You will see a page like the one shown below. Click on 'Accept this assignment'.
 <img alt="Alt" src="images/github-accept-assignment-part1.png" title="GitHub Project Accept Page 1" /></p>
@@ -96,6 +97,8 @@ than using the typical LMS. It will seem foreign when you start but be a little 
 <p>That will take you to a page like this.
 <img alt="Alt" src="images/github-accept-assignment-part2.png" title="GitHub Project Accept Page 2" /></p>
 </li>
+<li>
+-->
 <li>
 <p>Clicking on the link (yours will be similar) will bring to a page like this. If you see this you are almost there.<br />
 <img alt="Alt" src="images/github-accept-assignment-part3.png" title="GitHub Project Accept Page 3" /></p>
