--- a/individual-project.html
+++ b/individual-project.html
@@ -34,7 +34,7 @@
 <h1>Individual Project</h1>
 </section>
 <section id="page-content">
-<h2>Due 12/07/2018 23:59:59</h2>
+<h2>Due 12/14/2018 23:59:59</h2>
 <p>This assignment is intended to demonstrate your level of mastery of the course material. You will have a total of 12 weeks to complete the project with deliverables that are due almost every week. Refer to the <a href="#meeting-
     s">Meeting Milestones</a> section for details.</p>
 <h2 id="what-is-the-individual-project">What is the individual project?</h2>
@@ -45,7 +45,7 @@
 <li>Something that you can showcase during an internship or job interview</li>
 </ul>
     <a name="meeting-milestones"></a><h2 id="how-to-submit-website-other-deliverables">How to submit website &amp; other deliverables?</h2>
-<p>Similar to you weekly assignments, the project and all deliberables must be submitted via GitHub. Project documents that is emailed or submitted via Blackboard will receive 0 points.</p>
+<p>Similar to you weekly assignments, the project and all deliberables must be submitted via Blackboard. Project documents that are emailed or submitted outside Blackboard will receive 0 points. You'll also upload your project files to your personal GitHub repository to allow them to display on the web.</p>
 <h3 id="grading-rubrik-and-project-milestones">Grading rubrik and Project Milestones</h3>
 <p>This project has a total point value of 50. This is divided as follows</p>
 <table cellpadding="5px"cellspacing="5px">
