--- a/individual-project.html
+++ b/individual-project.html
@@ -34,9 +34,9 @@
 <h1>Individual Project</h1>
 </section>
 <section id="page-content">
-<h2>Due 12/14/2018 23:59:59</h2>
-<p>This assignment is intended to demonstrate your level of mastery of the course material. You will have a total of 12 weeks to complete the project with deliverables that are due almost every week. Refer to the <a href="#meeting-
-    s">Meeting Milestones</a> section for details.</p>
+<h2>Due 12/07/2018 23:59:59</h2>
+<p>This assignment is intended to demonstrate your level of mastery of the course material. You will have a total of 12 weeks to complete the project with deliverables that are due almost every week. Refer to the <a href="#meeting-milestones">Meeting 
+    s</a> section for details.</p>
 <h2 id="what-is-the-individual-project">What is the individual project?</h2>
 <p>Your goal is to design and develop a website on a topic that interests you. The website needs to have a minimum of 3 pages with unique layouts. An ideal topic will have the following qualities</p>
 <ul>
