--- a/schedule/week-01/index.html
+++ b/schedule/week-01/index.html
@@ -73,7 +73,7 @@
 <li><a target="_blank" href="https://www.youtube.com/watch?v=scWj1BMRHUA">Video - The Web is not the Net</a></li>
 </ul>
 <h2 id="homework-due-this-week">Homework due this week</h2>
-<p>Look in the class folder under <code>Week01/02/after-class/index.html</code></p></div>
+    <p><a href="02/after-class/">Build your resume</a></p>
 </section>
 </div>
     <footer class="col-md-12 text-center">
