--- a/schedule/week-01/02/after-class/index.html
+++ b/schedule/week-01/02/after-class/index.html
@@ -34,6 +34,7 @@
 <h1>Week01 &ndash; Homework</h1>
 </section>
 <section id="page-content">
+    <h2>Build Your Resume</h2>
 <p>Week01 homework involves a two-step process:
 <ol>
 <li>Prepare <strong>your resume</strong> in MS Word, Pages, or another word processing package of your choice.</li>
@@ -47,12 +48,15 @@
 <li><a href="https://www.monster.com/career-advice/article/nursing-student-resume-sample">https://www.monster.com/career-advice/article/nursing-student-resume-sample</a></li>
 </ul>
 </p>
-<h2>Guidelines</h2>
+<h3>Guidelines</h3>
 <ul>
 <li><strong>Skip the fancy formatting:</strong> Word and other programs provide all kinds of elaborate layouts for resumes, and you can use one of them if you like, but the formatting will be lost in the conversion to .txt.</li>
 <li><strong>Think about structure:</strong> When you start to lay out your resume in HTML, what levels of headings will you use? How will you use lists (both ordered/numbered and unordered/bulleted lists)? What other elements will you include? How will you organize all of them?</li>
 <li><strong>Leave thoughts about styling until later:</strong> Stay focused on how the layout will work, not about fonts, colors, and other visual effects. Those can come along later.</li>
 </ul>
+<h3>Thought for the Week's Class Summary</h2>
+<p>Why do you suppose I chose to use ordered (numbered) and unordered (bulleted) lists where I did above?</p>    
+    
 </section>
 </div>
     <footer class="col-md-12 text-center">
