--- a/schedule/week-04/02/index.html
+++ b/schedule/week-04/02/index.html
@@ -1,7 +1,15 @@
-<style>
-    @import url("/fall2019-m01/ist263-talley.css");
-</style>
-<title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/fall2019-m01/ist263-talley.css">
+    <title>IST263 - Intro. to Front-End Web Development - Syracuse University iSchool</title>
+</head>
+
+<body>
 <div id="top-banner">
   <img src="/fall2019-m01/block-s.png" alt="Syracuse University" height="53"/>
   <div id="logo-container">
@@ -23,58 +31,27 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1 id="week-04-css">Week 04 &ndash; CSS</h1>
+<h1>Week04 &ndash; Homework</h1>
 </section>
 <section id="page-content">
-<h2 id="learning-outcomes">Learning Outcomes</h2>
-<p>After this week you should be able to </p>
+<h2>Style Your Resume</h2>
+<p>This week's homework will add styling to your HTML resume via cascading stylesheets (CSS).</p>
+<p>Your process for doing this work will involve opening files from folder <code>week-04/02/</code>:
 <ul>
-<li>Describe CSS</li>
-<li>Write CSS to style hypertext documents</li>
-<li>Use Chrome Developer console</li>
+<li><a href="background.html">background.html</a></li>
+<li><a href="border.html">border.html</a></li>
+<li><a href="fonts.html">fonts.html</a></li>
 </ul>
-<hr />
-<h2 id="0401-intro-to-css">04.01 Intro. to CSS</h2>
-<h3 id="pre-class-reading">Pre-Class Reading</h3>
+Refer to the HTML and the CSS that it calls to update your resume file from <a href"">Week 02 Homework</a> to add styling.</p>
+<h3>Guidelines</h3>
 <ul>
-<li><a href="https://www.w3schools.com/css/css_intro.asp">CSS Introduction</a></li>
-<li>Review the file <code>week-04/01/index.html</code> in your course folder</li>
+<li> If you don't particularly like the gradient background, use it somewhere anyway. (The best place might be your header, but it's your choice.)</li>
+<li>You can go to <a href="http://fonts.google.com" target="_blank">Google Fonts</a>, if you like, to reference something other than the Roboto in the sample file.</li>
+<li>Change the color, thickness, or other specs of the borders, but use them somewhere.</li>
 </ul>
-<h3 id="class-slides">Class Slides</h3>
-<ul>
-<li>To Come<!--a href="../slides/ist263-w4-1.pdf">Week 4.1 Slides</a--></li>
-</ul>
-<h3 id="group-activty-lab">Group Activty / Lab</h3>
-<ul>
-<li>Look for details in the <code>labs</code> folder for this week</li>
-</ul>
-<h3 id="post-class-reading">Post-Class Reading</h3>
-<ul>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS">CSS Tutorial on MDN</a></li>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/How_CSS_works">How CSS works</a></li>
-</ul>
-<hr />
-<h2 id="0402-more-css">04.02 More CSS</h2>
-<h3 id="pre-class-reading_1">Pre-Class Reading</h3>
-<p><!-- - <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Selectors">Selectors</a>  -->
-- <a href="https://www.w3schools.com/css/css_border.asp">CSS Borders</a><br />
-- Review the file <code>week-04/02/index.html</code> in your course folder</p>
-<h3 id="class-slides_1">Class Slides</h3>
-<ul>
-<li><a href="../slides/ist263-w4-2.pdf">Week 4.2 Slides</a></li>
-</ul>
-<h3 id="group-activty-lab_1">Group Activty / Lab</h3>
-<ul>
-<li>Format the letter from Week02</li>
-</ul>
-<h3 id="post-class-reading_1">Post-Class Reading</h3>
-<ul>
-<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">CSS Reference</a></li>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Box_model">Box Model</a>. Look through the sample files and experiment with CSS short-hand    </li>
-</ul>
-<h3 id="homework-due-this-week">Homework due this week</h3>
-<p>Look in the class folder under <code>week-04/02/index.html</code></p>
-
+<h3>Thought for the Week's Class Summary</h2>
+<p>Why did you choose the styling you chose?</p>    
+    
 </section>
 </div>
     <footer class="col-md-12 text-center">
@@ -85,3 +62,5 @@
         
     </footer>
 </div>
+</body>
+</html>
