--- a/schedule/week-04/02/index.html
+++ b/schedule/week-04/02/index.html
@@ -42,7 +42,7 @@
 <li><a href="border.html">border.html</a></li>
 <li><a href="fonts.html">fonts.html</a></li>
 </ul>
-Refer to the HTML and the CSS that it calls to update your resume file from <a href"../../week-01/02/after-class/">Week 01 Homework</a> to add styling.</p>
+Refer to the HTML and the CSS that it calls to update your resume file from <a href="../../week-01/02/after-class/">Week 01 Homework</a> to add styling.</p>
 <h3>Guidelines</h3>
 <ul>
 <li> If you don't particularly like the gradient background, use it somewhere anyway. (The best place might be your header, but it's your choice.)</li>
