--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -65,7 +65,7 @@
 <h3 id="pre-class-reading_1">Pre-Class Reading</h3>
 <p><!-- - <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Selectors">Selectors</a>  -->
 - <a href="https://www.w3schools.com/css/css_border.asp">CSS Borders</a><br />
-- Review the file <code>week-04/02/index.html</code> in your course folder</p>
+- Review the file <code>week-04/02/border.html</code> in your course folder</p>
 <h3 id="class-slides_1">Class Slides</h3>
 <ul>
 <li><a href="../../slides/IST263-talley-W04.2.pdf">Week 4.2 Slides</a></li>
