--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -72,7 +72,7 @@
 </ul>
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
-<li>Format the letter from Week02</li>
+<li>Format the resume from Week02</li>
 </ul>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
