--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -72,7 +72,7 @@
 </ul>
 <h3 id="group-activty-lab_1">Group Activty / Lab</h3>
 <ul>
-<li>Format the resume from Week02</li>
+    <li>Format the <a href="../week-02/01/labs/howto.html">aboutme.html</a> page from Week02</li>
 </ul>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
@@ -80,7 +80,7 @@
 <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Box_model">Box Model</a>. Look through the sample files and experiment with CSS short-hand    </li>
 </ul>
 <h3 id="homework-due-this-week">Homework due this week</h3>
-<p>Look in the class folder under <a href="02/"><code>week-04/02/index.html</code></a></p>
+<p>Look for in the class folder under <a href="02/"><code>week-04/02/</code></a></p>
 </section>
 </div>
     <footer class="col-md-12 text-center">
