--- a/schedule/week-04/index.html
+++ b/schedule/week-04/index.html
@@ -80,7 +80,7 @@
 <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/Introduction_to_CSS/Box_model">Box Model</a>. Look through the sample files and experiment with CSS short-hand    </li>
 </ul>
 <h3 id="homework-due-this-week">Homework due this week</h3>
-<p>Look for in the class folder under <a href="02/"><code>week-04/02/</code></a></p>
+<p>Look for reference files in the class folder under <a href="02/"><code>week-04/02/</code></a></p>
 </section>
 </div>
     <footer class="col-md-12 text-center">
