--- a/schedule/week-06/02/news-page/news-page-complete-solution.html
+++ b/schedule/week-06/02/news-page/news-page-complete-solution.html
@@ -5,7 +5,7 @@ Did you try looking it up online?
 
 Did you ask your neighbor?
 
-Did you ask Avi?
+Did you ask David?
 
 
 If you answered yes to all, then go ahead and see the solution below
