--- a/schedule/week-06/01/index.html
+++ b/schedule/week-06/01/index.html
@@ -37,7 +37,7 @@
 <hr />
 <h2 id="0601">06.01</h2>
 <h3 id="pre-class-reading">Pre-class Reading</h3>
-<p>Read upto and including the 'display property' section<br />
+<p>Read up to and including the 'display property' section<br />
 - <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction">https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction</a>  </p>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
@@ -45,13 +45,19 @@
 </ul>
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
-<li>Implement the grid system template in the labs folder</li>
+    <li>Implement the grid system template in the <code>labs</code> folder</li>
 </ul>
 <h2 id="0602">06.02</h2>
 <h3 id="pre-class-reading_1">Pre-class Reading</h3>
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox">https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox</a></li>
 </ul>
+    <h3 id="group-activity-lab">Group Activity / Lab</h3>
+    <ul>
+        <li>Implement the below template using flexbox and the files in folder <code>news-page</code>:<br/>
+            <img src="news-page/news-template.png"/></li>
+        <li>Refer to this <a href="news-page/news-page-step-by-step-guide.html">step-by-step guide</a> if you need help.</li>
+    </ul>
 </section>
 </div>
     <footer class="col-md-12 text-center">
