--- a/schedule/week-06/index.html
+++ b/schedule/week-06/index.html
@@ -59,6 +59,12 @@
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox">https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox</a></li>
 </ul>
+    <h3 id="group-activity-lab">Group Activity / Lab</h3>
+    <ul>
+        <li>Implement the below template using flexbox and the files in folder <code>news-page</code>:<br/>
+            <img src="news-page/news-template.png"/></li>
+        <li>Refer to this <a href="news-page/news-page-step-by-step-guide.html">step-by-step guide</a> if you need help.</li>
+    </ul>
 </section>
 </div>
     <footer class="col-md-12 text-center">
