--- a/schedule/week-06/index.html
+++ b/schedule/week-06/index.html
@@ -62,7 +62,7 @@
     <h3 id="group-activity-lab">Group Activity / Lab</h3>
     <ul>
         <li>Implement the below template using flexbox and the files in folder <code>news-page</code>:<br/>
-            <img src="news-page/news-template.png"/></li>
+            <img src="02/news-page/news-template.png"/></li>
         <li>Refer to this <a href="news-page/news-page-step-by-step-guide.html">step-by-step guide</a> if you need help.</li>
     </ul>
 </section>
