--- a/schedule/week-06/index.html
+++ b/schedule/week-06/index.html
@@ -44,7 +44,7 @@
 <hr />
 <h2 id="0601">06.01</h2>
 <h3 id="pre-class-reading">Pre-class Reading</h3>
-<p>Read upto and including the 'display property' section<br />
+<p>Read up to and including the 'display property' section<br />
 - <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction">https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Introduction</a>  </p>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
@@ -54,6 +54,14 @@
 <ul>
 <li>Implement the grid system template in the labs folder</li>
 </ul>
+<h3 id="post-class-reading">Post-class Reading</h3>
+<p>Review these HTML files in the <code>week-06/01/</code> folder:<br />
+<ul>
+    <li><a href="01/summary.html">Summary.html</a></li>
+    <li><a href="01/flex-box.html">Flex-box.html</a></li>
+</ul>
+</p>
+
 <h2 id="0602">06.02</h2>
 <h3 id="pre-class-reading_1">Pre-class Reading</h3>
 <ul>
