--- a/schedule/week-07/index.html
+++ b/schedule/week-07/index.html
@@ -49,7 +49,7 @@
 <h3>No Pre-class Readings</h3>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li>To Come<!--a href="/slides/ist263-w7-2.pdf">Week 7.2 Slides</a--></li>
+<li><a href="../../slides/ist263-w7-2.pdf">Week 7.2 Slides</a></li>
 </ul>
 <h3 id="post-class">Post-Class Reading</h2>
 <ul>
