--- a/schedule/week-08/index.html
+++ b/schedule/week-08/index.html
@@ -46,7 +46,7 @@
 </ul>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li>To Come<!--a href="/slides/responsive-design.pdf">Week 8.1 Slides</a--></li>
+<li><a href="../../slides/IST263-talley-W08.1.pdf">Week 8.1 Slides</a></li>
 </ul>
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
