--- a/schedule/week-08/index.html
+++ b/schedule/week-08/index.html
@@ -63,7 +63,7 @@
 </ul>
 <h3 id="group-activity-lab_1">Group Activity / Lab</h3>
 <ul>
-<li>Refer to readme.txt in week-08/02/labs</li>
+    <li>Refer to instructions at <a href="/02/"><code>week-08/02/</code></li>
 </ul>
 <h3 id="post-class-reading_1">Post-Class Reading</h3>
 <ul>
