--- a/schedule/week-02/index.html
+++ b/schedule/week-02/index.html
@@ -39,7 +39,7 @@
 <ul>
 <li>Describe HTML</li>
 <li>Use basic HTML tags to create, edit hypertext documents</li>
-<li>Use Git to submit your work</li>
+<li>Upload your work to GitHub</li>
 </ul>
 <hr />
 <h2 id="0201-html">02.01 - HTML</h2>
