--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -53,8 +53,8 @@
 <h3 id="post-class-reading">Post-Class Reading</h3>
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA">ARIA</a></li>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Forms">WCAG2.0</a></li>
-<li><a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Forms">Section 508</a></li>
+<li><a href="http://www.w3.org/TR/WCAG20/">WCAG2.0</a></li>
+<li><a href="https://www.section508.gov/">Section 508</a></li>
 <li><a href="https://webaim.org/standards/wcag/checklist">WebAIM Checklist</a></li>
 </ul>
 <hr />
