--- a/schedule/week-09/index.html
+++ b/schedule/week-09/index.html
@@ -44,7 +44,7 @@
 <p><a href="https://www.dreamhost.com/blog/make-your-website-accessible/">Making website accessible</a></p>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li><a href="../../slides/IST263-talley-W09.1.pdf">Week 09.01 Slides</a--></li>
+<li><a href="../../slides/IST263-talley-W09.1.pdf">Week 09.01 Slides</a></li>
 </ul>
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
 <ul>
