--- a/schedule/week-10/index.html
+++ b/schedule/week-10/index.html
@@ -43,7 +43,7 @@
             <p><a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Getting Started</a></p>
             <h3 id="class-slides">Class Slides</h3>
             <ul>
-            <li>To Come<!--a href="../../slides/ist263-w9-1.pdf">Slides</a--></li>
+            <li><a href="../../slides/IST263-talley-W10.1.pdf">Slides</a></li>
             </ul>
             <h3 id="group-activity-lab">Group Activity / Lab</h3>
             <p>Copy your resume HTML page from <code>week-03</code> into <code>week-10/01/labs</code> folder. Use Bootstrap 4 to format your resume. </p>
@@ -56,6 +56,10 @@
             <h3 id="pre-class-reading_1">Pre-class Reading</h3>
             <ul>
             <li><a href="https://getbootstrap.com/docs/4.3/components/jumbotron/">Jumbotron</a></li>
+            </ul>
+            <h3 id="class-slides">Class Slides</h3>
+            <ul>
+            <li><a href="../../slides/IST263-talley-W10.2.pdf">Slides</a></li>
             </ul>
             <h3 id="post-class-reading_1">Post-Class Reading</h3>
             <ul>
