--- a/schedule/week-02/01/labs/howto.html
+++ b/schedule/week-02/01/labs/howto.html
@@ -39,7 +39,26 @@
         </section>
         <section>
             <h2>Submit to GitHub</h2>
-            <p>If you have the time try submitting this to GitHub. You can follow the instructions on the class website</p>
+            <p>If you have the time try submitting this to GitHub.</p>
+            <ol>
+                <li>Login to your GitHub account.</li>
+                <li>Click your profile icon at the upper right and select <strong>Your Repositories</strong>. <img src="images/your-repositories.png" align="right" alt="your repositories menu" /></li> 
+                    <ul>
+                        <li>Select the repo where you'll upload your file.</li>
+                        <li>If your account doesn't yet have any repos, select Create a new repository. <img src="images/new-repo.png" alt="new repo cta" /></li>
+                    </ul>
+                <li>Select the repo's Settings tab and scroll down to the GitHub Pages heading, then confirm that your <strong>master</strong> branch is selected as the site Data Source. If not, follow <a href="https://help.github.com/en/articles/configuring-a-publishing-source-for-github-pages"> target="_blank">instructions here</a> to make that selection now.</li>
+                <li>Copy the GitHub Pages address above the data source selector to a browser window.</li>
+                <li>Close Settings, then select the <a href="#">create new page</a> link or call-to-action (CTA, also known as a "button").</li>
+                <li>Key the following path into the 'Name Your File' input box: week-02/01/labs/readme.md and enter text 'readme.md' (or other placeholder text) into the editor window.<br />
+                    <img src="images/name-your-file.png" alt="name your file input" /></li>
+                <li>Scroll down and select the <strong>Commit changes</strong> CTA.</li>
+                <li>Add this path and filename in your browser window address bar, then click Enter: <code>week-02/01/labs/about-me.html</code><br />
+                Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/week-02/01/labs/about-me.html</li>
+                <li>Admire your first published web page!</li>
+            </ol>
+
+                
         </section>
     </main>
 </body>
