--- a/schedule/week-02/01/labs/howto.html
+++ b/schedule/week-02/01/labs/howto.html
@@ -47,7 +47,7 @@
                         <li>Select the repo where you'll upload your file.</li>
                         <li>If your account doesn't yet have any repos, select Create a new repository. <img src="images/new-repo.png" alt="new repo cta" /></li>
                     </ul>
-                <li>Select the repo's Settings tab and scroll down to the GitHub Pages heading, then confirm that your <strong>master</strong> branch is selected as the site Data Source. If not, follow <a href="https://help.github.com/en/articles/configuring-a-publishing-source-for-github-pages"> target="_blank">instructions here</a> to make that selection now.</li>
+                <li>Select the repo's Settings tab and scroll down to the GitHub Pages heading, then confirm that your <strong>master</strong> branch is selected as the site Data Source. If not, follow <a href="https://help.github.com/en/articles/configuring-a-publishing-source-for-github-pages" target="_blank">instructions here</a> to make that selection now.</li>
                 <li>Copy the GitHub Pages address above the data source selector to a browser window.</li>
                 <li>Close Settings, then select the <a href="#">create new page</a> link or call-to-action (CTA, also known as a "button").</li>
                 <li>Key the following path into the 'Name Your File' input box: week-02/01/labs/readme.md and enter text 'readme.md' (or other placeholder text) into the editor window.<br />
