--- a/schedule/week-02/01/labs/howto.html
+++ b/schedule/week-02/01/labs/howto.html
@@ -37,7 +37,7 @@
                 <li>You can now double click on the 'about-me.html' or right click the file and go to 'Open with' and choose your web browser</li>
             </ul>
         </section>
-        <section>
+        <section><a name="submit-to-github"/>
             <h2>Submit to GitHub</h2>
             <p>If you have the time try submitting this to GitHub.</p>
             <ol>
