Added questions from first week's summaries

--- a/question-bank.html
+++ b/question-bank.html
@@ -39,9 +39,15 @@
 <h2 id="spring-2019">Fall 2019</h2>
 <h2 id="week-1-anatomy-of-the-web">Week 1 - Anatomy of the Web</h2>
 
-content to come<!--
+content to come
 <ul>
-<li>What is the difference between HTTP and HTTPS? </li>
+    <li>Explain the difference between the world wide web and the internet.</li>
+    <li>What are the differences between a URL and the HTTP protocol? What is the difference between HTTP and HTTPS? </li>
+    <li>How can you tell if the data in a web request is encrypted?</li>W
+    <li>What is the different between HTTP and HTTPS?</li>
+    <li>Can applications other than browsers issue HTTP requests?</li>
+    <li>what is the different between a top-level-domain and a subdomain?
+        <!--
 <li>What is the significance of W3C and what purpose does it serve?</li>
 <li>What does HTTP stand for and what does it do? What is the difference between a URL and a Protocol?</li>
 <li>Define the terms internet, the web, and HTTP</li>
