--- a/question-bank.html
+++ b/question-bank.html
@@ -39,11 +39,11 @@
 <h2 id="spring-2019">Fall 2019</h2>
 <h2 id="week-1-anatomy-of-the-web">Week 1 - Anatomy of the Web</h2>
 
-content to come
+Additional content to come
 <ul>
     <li>Explain the difference between the world wide web and the internet.</li>
     <li>What are the differences between a URL and the HTTP protocol? What is the difference between HTTP and HTTPS? </li>
-    <li>How can you tell if the data in a web request is encrypted?</li>W
+    <li>How can you tell if the data in a web request is encrypted?</li>
     <li>What is the different between HTTP and HTTPS?</li>
     <li>Can applications other than browsers issue HTTP requests?</li>
     <li>what is the different between a top-level-domain and a subdomain?
