--- a/schedule/week-03/index.html
+++ b/schedule/week-03/index.html
@@ -69,8 +69,8 @@
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML Tags</a></li>
 </ul>
-<!--h3 id="homework-due-this-week">Homework due this week</h3>
-<p>Look in the class folder under <code>week-03/02/after-class/index.html</code></p-->
+<h3 id="homework-due-this-week">Homework due this week</h3>
+    <p>Look at page <a href="02/after-class"><code>week-03/02/after-class/index.html</code></a></p>
 </div>
 
 </section>
