--- a/schedule/week-02/02/after-class/index.html
+++ b/schedule/week-02/02/after-class/index.html
@@ -18,17 +18,17 @@
             <section>
                 <h3>Deliverables</h3>
                 <ul>
-                    <li>File name - 'letter.html'</li>
-                    <li>Must include the following tags</li>
+                    <li>File name: <code>[your SU NetID]-letter.html</code></li>
+                    <li>Must include the tags listed below</li>
                     <li>Run the file through W3C Validator</li>
-                    <li>Submit via GitHub</li>
+                    <li>Submit via Blackboard</li>
                 </ul>
                 You will need to keep this link handy for researching the tags - <a href="https://www.w3schools.com/tags/tag_comment.asp">https://www.w3schools.com/tags/tag_comment.asp</a>
             </section>
         </article>
         <article>
             <section>
-                <h3>Along with required HTML tags the following tags must be used</h3>
+                <h3>Along with required HTML tags (remember which those are?) the following tags must be used</h3>
                 <ul>
                     <li>main, header, section, footer</li>
                     <li>time</li>
@@ -42,17 +42,17 @@
 
             <section>
                 <h3>Here is some additional information to consider</h3>
-                <p>The letter in general should be marked up with a structure of paragraphs and headings, with the
-                    exception of the below points.</p>
+                <p>The letter in general should be marked up with a structure of paragraphs and headings, with some 
+                    exceptions:</p>
                 <ul>
                     <li> There is one top level heading (the "Re:" line) and three second level headings.</li>
                     <li>The semester start dates, study subjects and exotic dances should be marked up using an
                         appropriate list type.</li>
-                    <li>In addition, each line of the addresses should sit on a new line, but not be in a new
+                    <li>In addition, each line of the addresses should sit on a new line, but not break to a new
                         paragraph.</li>
                 </ul>
             </section>
-            <hr>
+            <hr/>
             <section>
                 <h3>Your page should look like the screenshot below</h3>
                 <img src="./letter-screengrab.png" alt="letter markup">
