add homework reference
Also project deliverable

--- a/schedule/week-02/index.html
+++ b/schedule/week-02/index.html
@@ -86,8 +86,28 @@
 </ul>
 </li>
 </ul>
-<!--h3 id="homework-due-this-week">Homework due this week</h3>
-<p>Look in the class folder under <code>week-02/02/after-class/index.html</code></p-->
+<h3 id="deliverable-due-this-week">Project deliverable due this week</h3>
+    <p>The <a href="../../individual-project.html">Individual Project</a> page lists deliverables for your semester-long project, and one of them is due this week: the Project Idea.
+    <ul>
+        <li>Worth 2 points toward your semester grade (2%).</li>
+        <li>Short text description &mdash; 50-100 words. Be concise!</li>
+        <li>List of pages &mdash; min. 3, can be tentative. (You'll firm up your plan in the site map deliverable.)</li>
+        <li>Explain where you'll get your content &mdash; text and images, subject to change, with consideration of rights to reuse others' intellectual property (IP).</li>
+        <li>Submit as html document uploaded to to Blackboard and to GitHub, displayed through GitHub Pages, using the following HTML elements:
+            <ul>
+                <li>main, header, section, footer</li>
+                <li>abbr</li>
+                <li>dl, dt, dd</li>
+                <li>h1, h2, h3, ...
+                <li>p</li>
+            </ul>
+        </li>
+        <li>Research the tags here: <a href="https://www.w3schools.com/tags/tag_comment.asp">https://www.w3schools.com/tags/tag_comment.asp</a></li>
+        <li>Filename: <code>[Your project folder]/[Your SU NetID]-project-idea.html</code></li>
+    </ul>
+    </p>
+            
+        <!--a href="02/after-class/"><code>week-02/02/after-class/index.html</code></a--></p>
 </div>
 </section>
 </div>
