--- a/schedule/week-02/index.html
+++ b/schedule/week-02/index.html
@@ -106,6 +106,7 @@
         <li>Filename: <code>[Your project folder]/[Your SU NetID]-project-idea.html</code></li>
     </ul>
     </p>
+    <p>This looks like a pretty small assignment &mdash; only 50-100 words of text with some html tagging &mdash; but it's intended to get you putting signifcant thought and planning into the start of your project. You aren't committing to any final outcome yet. This is a time for your best creative brainstormming to get yourself off to a good start toward an important and impressive portfolio piece. So take some time over the planning, as well as the writing and <code>coding</code>.
             
         <!--a href="02/after-class/"><code>week-02/02/after-class/index.html</code></a--></p>
 </div>
