--- a/schedule/week-02/index.html
+++ b/schedule/week-02/index.html
@@ -93,7 +93,9 @@
         <li>Short text description &mdash; 50-100 words. Be concise!</li>
         <li>List of pages &mdash; min. 3, can be tentative. (You'll firm up your plan in the site map deliverable.)</li>
         <li>Explain where you'll get your content &mdash; text and images, subject to change, with consideration of rights to reuse others' intellectual property (IP).</li>
-        <li>Submit as html document uploaded to Blackboard and to GitHub, displayed through GitHub Pages, using the following HTML elements:
+        <li>Upload an html document to your GitHub repository for display through GitHub Pages.</;i>
+        <li>Also Submit to Blackboard and include your GitHub Pages URL as a comment on the Blackboard file upload.</li>    
+        <li>Include at least the following HTML elements:
             <ul>
                 <li>main, header, section, footer</li>
                 <li>abbr</li>
