--- a/work-with-github.html
+++ b/work-with-github.html
@@ -5,41 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Week 02 - How To</title>
+    <title>Work with GitHub - IST263</title>
 </head>
 
 <body>
     <main>
         <section>
-            <h2>Create an 'about-me.html' page</h2>
-            <p>Lab Deliverables</p>
-            <ul>
-                <li>A HTML page be called 'about-me.html' in the current folder</li>
-                <li>The page 'title' should be your name</li>
-                <li>In the 'body' of the page write 2 short paragraphs about yourself.</li>
-            </ul>
-            <p>Below are instructions</p>
-            <ul>
-                <li>Open VS Code. Then click 'File' -> 'Open Workspace'. Browse to the class GitHub folder</li>
-                <li>In the left sidebar, expand 'week-02/01/labs' folder</li>
-                <li>You will be creating your 'about-me.html' page in that folder. Instead of manually typing the basic HTML skeleton code copy the 'boilderplate.html' file and paste it in the labs folder. Now click on the folder and rename it to 'about-me.html'
-                    </li>
-                <li>Change the 'title' tag to your name</li>
-                <li>Next, create a paragraph i.e. 'p' tag inside the 'body' element and write something about yourself. Repeat the step to create another paragraph</li>
-                <li>Save the file</li>
-            </ul>
-        </section>
         <section>
-            <h2>Viewing the file in your browser</h2>
-            <ul>
-                <li>In the VS Code sidebar, right click on the new file you created and choose 'Reveal in Finder' or 'Reveal in Explorer'</li>
-                <li>This will lauch Finder or Windows Explorer in the folder</li>
-                <li>You can now double click on the 'about-me.html' or right click the file and go to 'Open with' and choose your web browser</li>
-            </ul>
-        </section>
-        <section><a name="submit-to-github"/>
+            <h1>Working with GitHub</h1>
+            <p>Our class uses GitHub as a repository for our html files, then we use its GitHub Pages function to display the work as public webpages. This involves a few steps you'll need to take:
+            <ol>
+                <li>Create a repository and enable it for GitHub Pages display.</li>
+                <li>Draft your html (and eventually CSS) in VS Code, then submit it to your GitHub repo.</li>
+                <li>View your GitHub content in the browser.</li>
+            </ol>
+            </p>
+            <h2>Create a Repo</h2>
+            <p>If you already have a personal repository you will use, skip this step.</p>
+            <ol>
+                <li>Login to your GitHub account.</li>
+                <li>Click your profile icon at the upper right and select <strong>Your Repositories</strong>. <img src="images/your-repositories.png" align="right" alt="your repositories menu" /></li>
+                <li>Click the <strong>New</strong> CTA (call-to-action, also known as a "button") to create a new repository. <img src="images/new-repo.png" alt="new repo cta" /></li>
+                <li>Enter a name for your repository &mdash; all lower-case, no spaces!</li>
+                <li>Click the <strong>Create Repository</strong> CTA.</li>
+            </ol>
+            <h3>Enable GitHub Pages Display</h3>
+            <ol>
+                <li>Open your repo, as in step 2 above, then select the <strong>Settings</strong> tab.</li>
+                <li>Scroll down to the <strong>GitHub Pages</strong> heading, then confirm that your <strong>master</strong> branch is selected as the site Data Source. If not, follow <a href="https://help.github.com/en/articles/configuring-a-publishing-source-for-github-pages" target="_blank">instructions here</a> to make that selection now.</li>
+                <li>Copy the GitHub Pages address above the data source selector to a browser window (the browser will show a 404 error at this point) and bookmark it. This will be the start of any of your GitHub Pages display.</li>
+                <li>Close Settings, then select the <a href="#">create new page</a> link or CTA.</li>
+                <li>Enter this filename for your new page: <code>index.html</code>, then enter some text for you page, something like "This will be the base index.html page."</li>
+                <li>Scroll down and select the <strong>Commit changes</strong> CTA.</li>
+                <li>Edit the URL in your browser window address bar, then click Enter: <code>week-02/01/labs/about-me.html</code><br />
+                Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/week-02/01/labs/about-me.html</code></li>
+                <li>Admire your first published web page!</li>
+            </ol>
             <h2>Submit to GitHub</h2>
-            <p>If you have the time try submitting this to GitHub.</p>
             <ol>
                 <li>Login to your GitHub account.</li>
                 <li>Click your profile icon at the upper right and select <strong>Your Repositories</strong>. <img src="images/your-repositories.png" align="right" alt="your repositories menu" /></li> 
@@ -57,8 +59,13 @@
                 Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/week-02/01/labs/about-me.html</code></li>
                 <li>Admire your first published web page!</li>
             </ol>
-
-                
+            <h2>Viewing the file in your browser</h2>
+            <ul>
+                <li>In the VS Code sidebar, right click on the new file you created and choose 'Reveal in Finder' or 'Reveal in Explorer'</li>
+                <li>This will lauch Finder or Windows Explorer in the folder</li>
+                <li>You can now double click on the 'about-me.html' or right click the file and go to 'Open with' and choose your web browser</li>
+            </ul>
+        </section>
         </section>
     </main>
 </body>
