--- a/computer-setup.html
+++ b/computer-setup.html
@@ -36,6 +36,7 @@
 <section id="page-content">
 <p>In this class you will use tools and workflows that web developers use in the industry. Also, it is a lot more efficient
 than using the typical LMS. It will seem foreign when you start but be a little patient &amp; persistant.</p>
+<p>A separate page gives guidance for working with GitHub once you have created your account there: <a href="work-with-github.html">work-with-github</a>.
 <h2 id="1-integrated-development-environment-ide">1. Integrated Development Environment (IDE)</h2>
 <p>If you have used programs like MS-Word, you have used an IDE. IDEs are specialized programs that provide features and tools that make your development process efficient. Just like you would use MS-Word to write and format papers, resumes, or letters we will use something similar in this class to write HTML, CSS and some Javascript.</p>
 <h3 id="vs-code">VS Code</h3>
