--- a/work-with-github.html
+++ b/work-with-github.html
@@ -68,7 +68,7 @@
                 <li>Login to your GitHub account and open your personal repository.</li>
                 <li>Navigate to the GitHub folder where you want to place your .html file.</li>
                 <li>Select the <strong>Upload files</strong> CTA.</li>
-                <li>Drag and drop from your file explorer or finder, or click <strong>Choose your files</strong> and select one or more files from your computer's file system, then click strong>Open</strong>.
+                <li>Drag and drop from your file explorer or finder, or click <strong>Choose your files</strong> and select one or more files from your computer's file system, then click <strong>Open</strong>.
                 <li>Scroll down and select the <strong>Commit changes</strong> CTA.</li>
                 <li>Add your filename in your browser window address bar, then click Enter.<br />
                 Your URL should be formed like this: <code>https://[your-GitHub-user-id].github.io/[your-repo-id]/your-filename.html</code></li>
