--- a/work-with-github.html
+++ b/work-with-github.html
@@ -84,7 +84,7 @@
                 <li>Scroll down and select the <strong>Commit changes</strong> CTA.</li>
                 <li>You can now navigate to your new folder and upload files &mdash; .html, images, or others &mdash; as described above.</li>
             </ul>
-            <p>View a screen capture animation at <a href="https://www.screencast.com/t/a4aXBa80OTK" title="screen animation">Screencast.com</a> (requires Adobe Flash to view).</p>
+            <p>View a screen capture animation at <a href="https://www.screencast.com/t/a4aXBa80OTK" title="screen animation" target="_blank">Screencast.com</a> (requires Adobe Flash to view).</p>
 </section>
 </div>
     <footer class="col-md-12 text-center">
