--- a/work-with-github.html
+++ b/work-with-github.html
@@ -31,7 +31,7 @@
 </div>
 <div role="main" id="page-body">
 <section id="header-panel">
-<h1>Work With GitHub</h1>
+    <h1><u>Work With GitHub</u></h1>
 </section>
 <section id="page-content">
             <p>Our class uses GitHub as a repository for our html files, then we use its GitHub Pages function to display the work as public webpages. This involves a few steps you'll need to take:
