--- a/schedule/week-03/index.html
+++ b/schedule/week-03/index.html
@@ -45,6 +45,17 @@
 <ul>
 <li><a href="https://ryanstutorials.net/html-tutorial/html-links.php">Links</a></li>
 </ul>
+<h3>Before Class</h2>
+<p>Do the pre-class reading on the class website (above).</p>
+<p>You will come across some new terminologies, make a note of them.</p>
+<p>Look through the files we will use in class next.</p>
+<ul>
+    <li><a href="links.html">Links</a></li>
+    <li><a href="lists.html">Lists</a></li>
+    <li><a href="more-links-examples.html">More Links</a></li>
+    <li><a href="table.html">Tables</a></li>
+</ul>
+</h3>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
 <li><a href="../../slides/IST263-talley-W03.1.pdf">Week 3.1 Slides</a></li>
@@ -58,7 +69,7 @@
 </ul>
 <h3 id="class-slides">Class Slides</h3>
 <ul>
-<li><a href="../../slides/IST263-talley-W03.2.pdf">Week 3.1 Slides</a></li>
+<li><a href="../../slides/IST263-talley-W03.2.pdf">Week 3.2 Slides</a></li>
 </ul>
 <hr />
 <h3 id="group-activity-lab">Group Activity / Lab</h3>
