--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <tr>
 <td><a href="schedule/week-04/">Week 4</a></td>
 <td>09/17 and 09/19</td>
-<td><a href="schedule/week-04.html">Introduction to CSS</a></td>
+<td><a href="schedule/week-04/">Introduction to CSS</a></td>
 </tr>
 <tr>
 <td><a href="schedule/week-05/">Week 5</a></td>
