--- a/schedule/week-03/02/index.html
+++ b/schedule/week-03/02/index.html
@@ -55,6 +55,7 @@ To Come<!--li>Our solar system. See details in your class' <code>week-03/02/labs
 <h3 id="post-class-reading">Post-Class Reading</h3>
 <ul>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML Tags</a></li>
+<li>A href="https://www.w3schools.com/html/html_layout.asp">HTML Layout</a></li>
 </ul>
 <!--h3 id="homework-due-this-week">Homework due this week</h3>
 <p>Look in the class folder under <code>week-03/02/after-class/index.html</code></p-->
