--- a/schedule/week-03/02/labs/solar system.html
+++ b/schedule/week-03/02/labs/solar system.html
@@ -17,6 +17,7 @@
 <body>
     <main>
         <h3>The Solar System formed around 4.6 billion years ago.</h3>
+        <img src="images/solar-system.jpg" align="right" alt="solar system"/>
         <!--
             2. Add an img tag to include the image solar-system.jpg below the heading
         -->        
