--- a/schedule/week-03/02/labs/solar system.html
+++ b/schedule/week-03/02/labs/solar system.html
@@ -30,13 +30,40 @@
             <!--
                 3. Link the astronomers name to their respective wikipedia pages. Make the links open in a new tab
             -->
-            Astronomers such as Nicolaus Copernicus, Galileo Galilei, Johannes Kepler and Isaac Newton helped develop a
+            Astronomers such as <a href"https://en.wikipedia.org/wiki/Nicolaus_Copernicus" target="_blank">Nicolaus Copernicus</a>, <a href="https://en.wikipedia.org/wiki/Galileo_Galilei" target="_blank">Galileo Galilei</a>, <a href="https://en.wikipedia.org/wiki/Johannes_Kepler" target="_blank" target="_blank">Johannes Kepler</a> and <a href="https://en.wikipedia.org/wiki/Isaac_Newton" target="_blank">Isaac Newton</a> helped develop a
             new model that explained the movement of the planets with the Sun at the center of the Solar System.
         </p>
 
         <p>
             <h1>Sun</h1>
             The sun is at the center of our solar system. 
+        <table width="80%" border="1" cellspacing="5" cellpadding="5">
+            <tr>
+                <th>Label</th>
+                <th>Value</th>
+            </tr>
+            <tr>
+                <td>Age:</td>
+                <td>4.6 Billion Years</td>
+            </tr>
+            <tr>
+                <td>Type:</td>
+                <td>Yellow Dwarf (G2V)</td>
+            </tr>
+            <tr>
+                <td>Diameter:</td>
+                <td>1,392,684 km</td>
+            </tr>
+            <tr>
+                <td>Equatorial Circumference</td>
+                <td>4,370,005.6 km</td>
+            </tr>
+            <tr>
+                <td>Mass:	1.99 × 10^30 kg (333,060 Earths)</td>
+                <td>Surface Temperature:	5,500 °C</td>
+            </tr>
+        </table>
+                
             <!--
                 4.Add a table to display this information in a HTML table
 
